fix white space

--- a/src/scss/components/info.scss
+++ b/src/scss/components/info.scss
@@ -33,6 +33,7 @@
         z-index: 20;
         margin-left: 6px;
         transform: translateY(2px);
+        white-space: initial;
         // position: fixed;
         // right: 10px;
         // bottom: 10px;
